# practice_selenium

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.sh  start_grid.sh  stop_grid.sh
allure-results/: 20eca96d-59ef-4279-bdf9-94e766767b85-container.json  2abd655b-22b7-47ea-9373-865aad2fb6c2-container.json  3c9b39d6-9172-46f7-81aa-2afa37fc085b-container.json  5601a417-1e76-466f-9523-9215320b863b-container.json  7d25fb07-9fe3-4105-98cc-cb5455b14c23-container.json  a0961e7c-26b6-444f-b4c8-700003b7195d-container.json  a81268b4-a200-4875-b925-3e5e2efe82ff-result.json  ba72294d-09ed-4ddb-9744-04700b4fbe80-container.json  ca670a04-d7ee-4beb-9e54-693e6f10066e-result.json  f66a6c2d-1eee-4001-afdc-0edfe13b3157-container.json  f8707da8-91fb-40ce-8c32-4de93700aae4-result.json
framework/config/: browser_options.py
framework/locators/: text_box_page_locators.py
framework/pages/: base_page.py  text_box_page.py
test/: conftest.py  test_text_box_page.py
test/fixtures/: config_fixtures.py  page_fixtures.py
