[tool.poetry]
name = "test_selenium"
version = "0.1.0"
description = ""
authors = ["oleksandrkozlov <oleksandr.kozlov@geo-pay.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.30.0"
pytest = "^8.3.5"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
